# cmake_c_project_template

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: main.h
include/project/: project_lib.h
src/: main.c  project_lib.c
src/project/: project_lib.c
test/: project_lib_add9_test.c
test/project/lib/: project_lib_add9_test.c
